<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_logo" />

        <EditText
            android:id="@+id/editText_cab_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:ems="10"
            android:textColor="#000"
            android:gravity="center"
            android:hint="Cab-No" >

            <requestFocus />
        </EditText>
    </LinearLayout>
<View 
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#212121"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_logo" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:ems="10"
            android:gravity="center"
            android:textColor="#000"
            android:hint="Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_back"
        android:text="@string/login"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_gotowebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/button_back"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="onGoToWebsite"
        android:text="@string/gotowebsite"/>

    <Button
        android:id="@+id/button_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:background="@drawable/button_back"
        android:layout_marginLeft="20dp"
        android:onClick="onContact"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contact"/>
</LinearLayout>
    <TextView
        android:id="@+id/textView_poweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/powedby"
        android:textColor="@android:color/white"               
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
