<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/login_background"
    >
 <LinearLayout
     android:id="@+id/logout_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="right"
         android:layout_margin="5dp"         
         android:layout_height="wrap_content" >

         <Button
             android:id="@+id/button_logout"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="25dp"
             android:layout_height="30dp"
             android:background="@drawable/logoutlogo"
              />

     </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#faf7f7" />
	  <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"            
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/logo1" />

        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_marginBottom="5dp"
		android:layout_weight="1"
		android:gravity="center"
        android:orientation="vertical" >

              <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/booking_btn_back"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_bookings"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/booking"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/booking_btn_back"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button_curr_loc"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/mylocation"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/booking_btn_back"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button_completedtour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:text="@string/completedtour"
                android:onClick="onCompletedTour"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/booking_btn_back"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/help"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/arrow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/poweredby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#faf7f7"/>
        <TextView
        android:id="@+id/textView_poweredby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/powedby"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

   
</LinearLayout>